# ogc-cite-runner

./: CHANGELOG.md  README.md  action.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml  test-action.yaml
docs/: development.md  index.md  ogc-test-suites.md  running-as-github-action.md  running-as-standalone-cli.md
docs/slides/20251121-foss4g/: README.md  mkslides.yml  slides.md
docs/usage/: running-as-github-action.md  running-as-standalone-cli.md
src/cite_runner/: config.py  exceptions.py  main.py  models.py  teamengine_runner.py
src/cite_runner/parsers/: earl.py
src/cite_runner/serializers/: console.py  simple.py
src/cite_runner/templates/: test-suite-result.md
src/ogc_cite_runner/: config.py  exceptions.py  main.py  teamengine_runner.py
src/ogc_cite_runner/serializers/: console.py  simple.py
tests/: simpleserver.py  test_parsers_earl.py
tests/data/: raw-result-ogcapi-features-1.0-earl.xml  raw-result-ogcapi-processes-1.0-earl.xml  raw-result-ogcapi-tiles-1.0.xml
