[project]
name = "cite-runner"
version = "0.1.0"
description = "A runner for OGC CITE test suites"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ricardo Garcia Silva", email = "ricardo.garcia.silva@gmail.com" }
]
maintainers = [
    { name = "Ricardo Garcia Silva", email = "ricardo.garcia.silva@gmail.com" }
]
keywords = [ "OGC", "CITE", "test"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12.3,<0.13.0",
    "httpx>=0.27.0,<0.28.0",
    "jinja2>=3.1.4,<4.0.0",
    "jinja2-humanize-extension>=0.4.0,<0.5.0",
    "pydantic>=2.10.4,<3.0.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "lxml>=5.3.1,<6.0.0",
    "isodate>=0.7.2,<0.8.0",
]

[project.urls]
homepage = "https://osgeo.github.io/cite-runner/"
repository = "https://github.com/OSGeo/cite-runner"
documentation = "https://osgeo.github.io/cite-runner/"
"Bug Tracker" = "https://github.com/OSGeo/cite-runner/issues"

[project.scripts]
cite-runner = "cite_runner.main:app"

[tool.poetry]
package-mode = true
packages = [
    { include = "cite_runner", from = "src" }
]


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
pre-commit = "^4.2.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
ruff = "^0.11.2"


[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
